fixed package card alignment on ipad view

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2958,7 +2958,7 @@ drawer.right {
   }
 
   .zolo_card{
-    max-height: 250px;
+    max-height: 250px!important;
     height: 150px;
   }
   #text_size{
